--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ levels = { git = "https://github.com/zayden-bot/levels.git", branch = "main" }
 
 async-trait = { version = "*", default-features = false }
 chrono = { version = "*", default-features = false }
-futures = { version = "*", default-features = false, features = [] }
+futures = { version = "*", default-features = false }
 rand = { version = "*", default-features = false, features = ["thread_rng"] }
 rand_distr = { version = "*", default-features = false }
 serenity = { version = "*", default-features = false, features = [] }
