--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,8 @@ futures = { version = "*", default-features = false }
 rand = { version = "*", default-features = false, features = ["thread_rng"] }
 rand_distr = { version = "*", default-features = false }
 serenity = { version = "*", default-features = false, features = [] }
-sqlx = { version = "*", default-features = false, features = ["any", "macros"] }
+sqlx = { version = "*", default-features = false, features = [
+    "any",
+    "json",
+    "macros",
+] }
