fix missing Deserialize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = { version = "*", default-features = false }
 futures = { version = "*", default-features = false }
 rand = { version = "*", default-features = false, features = ["thread_rng"] }
 rand_distr = { version = "*", default-features = false }
+serde = { version = "*", default-features = false }
 serenity = { version = "*", default-features = false, features = [] }
 sqlx = { version = "*", default-features = false, features = [
     "any",
